Added a vehicle controller and cleaned most of the code

--- a/src/DoubleQoL.dll.config
+++ b/src/DoubleQoL.dll.config
@@ -68,6 +68,11 @@
 			Default: Keypad9
 		-->
 		<add key="collapse" value="Keypad9" />
+		<!--
+			KeyCode to enable/disable vehicle tool
+			Default: Comma
+		-->
+		<add key="vehicletool" value="Comma" />
 		<!--Enable/Disable dev mode (ignore this, it's only for testing)-->
 		<add key="dev" value="F6" />
 	</KeyCodes>
@@ -86,7 +91,7 @@
 		<!--Default: false-->
 		<add key="collapse" value="false" />
 		<!--
-			Accepted values: 1 - 24
+			Accepted values: 1 - 22
 			Default: 2
 		-->
 		<add key="towerarea" value="2" />
