Check point before changing the services

--- a/.gitignore
+++ b/.gitignore
@@ -734,3 +734,4 @@ Temporary Items
 # Additional files built by Visual Studio
 
 # End of https://www.toptal.com/developers/gitignore/api/csharp,visualstudiocode,visualbasic,visualstudio,notepadpp,unity,git
+/.gitignore
